--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jest": "^27.5.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "ts-node-dev": "^1.1.8",
